<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.usf.cse.labrador.familycare.CreateNewAccount"
    android:padding="30dp">

    <TextView
        android:id="@+id/create_acc_display_text"
        android:hint="@string/create_acc_text"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    //Text box for email
    <EditText
        android:id="@+id/text_box_email1"
        android:hint="@string/enter_email"
        android:layout_below="@id/create_acc_display_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"/>

    //Text box for first name
    <EditText
        android:id="@+id/text_box_first_name"
        android:hint="@string/enter_first_name"
        android:layout_below="@id/text_box_email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPersonName"/>

    //Text box for last name
    <EditText
        android:id="@+id/text_box_last_name"
        android:hint="@string/enter_last_name"
        android:layout_below="@id/text_box_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPersonName"/>

    //Text box for username
    <EditText
        android:id="@+id/text_box_username1"
        android:hint="@string/enter_username"
        android:layout_below="@id/text_box_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="text"/>

    //Text box for password
    <EditText
        android:id="@+id/text_box_password1"
        android:hint="@string/enter_password"
        android:layout_below="@id/text_box_username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"/>

    //Text box for confirm password
    <EditText
        android:id="@+id/text_box_confirm_password"
        android:hint="@string/enter_confirm_pass"
        android:layout_below="@id/text_box_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/create_button"
        android:text="@string/create_text"
        android:onClick="createAccount"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_box_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="15dp"/>

</RelativeLayout>
