<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.usf.cse.labrador.familycare.ContactPharmacy"
    android:padding="30dp"
    android:layout_centerHorizontal="true">


    <TextView
        android:id="@+id/display_text"
        android:hint="@string/contact_test"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/msg_pharmacist"
        android:text="@string/msg_pharmacist"
        android:onClick="sendMessage"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/display_text"/>

    <Button
        android:id="@+id/call_pharmacy"
        android:text="@string/call_pharmacy"
        android:onClick="callPharmacy"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/msg_pharmacist"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/route_pharmacy"
        android:text="@string/pharmacy_route"
        android:onClick="pharmacyRoute"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/call_pharmacy"
        android:layout_marginTop="10dp" />

</RelativeLayout>
