<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="edu.usf.cse.labrador.familycare.Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/softGray"
        android:id="@+id/dashHeader">

        <Button android:id="@+id/btnReminder"
            android:text="@string/btnReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pillReminder" />

        <Button android:id="@+id/btnBarcode"
            android:text="@string/btnBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="barCodeScanner"/>

        <Button android:id="@+id/btnContact"
            android:text="@string/btnContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="contactPharmacy"/>

    </LinearLayout>

    <ListView
        android:id="@+id/rxList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dashHeader">
    </ListView>




</RelativeLayout>