<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.usf.cse.labrador.familycare.Login">
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        app:srcCompat="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="5dp">

        //email text
        <TextView
            android:id="@+id/text_email"
            android:text="Email"
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp" />

        //Text box for email
        <EditText
            android:id="@+id/text_box_email"
            android:hint="@string/enter_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/text_email"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="5dp">

        //password text
        <TextView
            android:id="@+id/password_text"
            android:text="@string/password"
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="17dp" />

        //Text box for password
        <EditText
            android:id="@+id/text_box_password"
            android:hint="@string/enter_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/password_text"
            android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/row2"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgot_password_link"
            android:hint="@string/forgot_pass"
            android:textSize="15dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="forgotPassword"
            android:clickable="true"
            android:background="#0000" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_text"
        android:onClick="submitLogin"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />


</RelativeLayout>
